@@ -30,15 +30,16 @@ import com.badlogic.gdx.math.Rectangle;
 import com.badlogic.gdx.utils.Disposable;
 
 public abstract class BatchTiledMapRenderer implements TiledMapRenderer, Disposable {
+
 	protected TiledMap map;
 
 	protected float unitScale;
 
-	protected Batch spriteBatch;
+	protected Batch batch;
 
 	protected Rectangle viewBounds;
 
-	protected boolean ownsSpriteBatch;
+	protected boolean ownsBatch;
 
 	protected float vertices[] = new float[20];
 
@@ -54,8 +55,8 @@ public abstract class BatchTiledMapRenderer implements TiledMapRenderer, Disposa
 		return unitScale;
 	}
 
-	public Batch getSpriteBatch () {
-		return spriteBatch;
+	public Batch getBatch () {
+		return batch;
 	}
 
 	public Rectangle getViewBounds () {
@@ -70,8 +71,8 @@ public abstract class BatchTiledMapRenderer implements TiledMapRenderer, Disposa
 		this.map = map;
 		this.unitScale = unitScale;
 		this.viewBounds = new Rectangle();
-		this.spriteBatch = new SpriteBatch();
-		this.ownsSpriteBatch = true;
+		this.batch = new SpriteBatch();
+		this.ownsBatch = true;
 	}
 
 	public BatchTiledMapRenderer (TiledMap map, Batch batch) {
@@ -82,13 +83,13 @@ public abstract class BatchTiledMapRenderer implements TiledMapRenderer, Disposa
 		this.map = map;
 		this.unitScale = unitScale;
 		this.viewBounds = new Rectangle();
-		this.spriteBatch = batch;
-		this.ownsSpriteBatch = false;
+		this.batch = batch;
+		this.ownsBatch = false;
 	}
 
 	@Override
 	public void setView (OrthographicCamera camera) {
-		spriteBatch.setProjectionMatrix(camera.combined);
+		batch.setProjectionMatrix(camera.combined);
 		float width = camera.viewportWidth * camera.zoom;
 		float height = camera.viewportHeight * camera.zoom;
 		viewBounds.set(camera.position.x - width / 2, camera.position.y - height / 2, width, height);
@@ -96,7 +97,7 @@ public abstract class BatchTiledMapRenderer implements TiledMapRenderer, Disposa
 
 	@Override
 	public void setView (Matrix4 projection, float x, float y, float width, float height) {
-		spriteBatch.setProjectionMatrix(projection);
+		batch.setProjectionMatrix(projection);
 		viewBounds.set(x, y, width, height);
 	}
 
@@ -146,18 +147,19 @@ public abstract class BatchTiledMapRenderer implements TiledMapRenderer, Disposa
 	/** Called before the rendering of all layers starts. */
 	protected void beginRender () {
 		AnimatedTiledMapTile.updateAnimationBaseTime();
-		spriteBatch.begin();
+		batch.begin();
 	}
 
 	/** Called after the rendering of all layers ended. */
 	protected void endRender () {
-		spriteBatch.end();
+		batch.end();
 	}
 
 	@Override
 	public void dispose () {
-		if (ownsSpriteBatch) {
-			spriteBatch.dispose();
+		if (ownsBatch) {
+			batch.dispose();
 		}
 	}
+
 }
