@@ -1,8 +1,10 @@
 [1.4.2]
+- API Addition: Added ability to save PixmapPackers to atlas files. See PixmapPackerIO.
 - API Addition: Added HttpRequestHeader and HttpResponseHeader with constants for HTTP headers.
 - API Addition: HttpRequest is now poolable.
 - New PNG encoder that supports compression, more efficient vertical flipping, and minimal allocation when encoding multiple PNGs.
 - API Change: Label#setEllipse -> Label#setEllipsis.
+- API Change: BatchTiledMapRenderer *SpriteBatch fields and methods and fields renamed to *Batch
 
 [1.4.1]
 - Update to the Gradle Integration plugin nightly build if you are on Eclipse 4.4.x!
